--- a/packages/site/index.pug
+++ b/packages/site/index.pug
@@ -4,7 +4,7 @@ block vars
   - var mainClass = 'root';
 
 block title
-  | Shorten your links | kes.im
+  | Shorten your links | 知链短链接
 
 block prepend scripts
   if env.CF_TURNSTILE_ENABLED
