--- a/packages/site/pug/head/meta.pug
+++ b/packages/site/pug/head/meta.pug
@@ -1,5 +1,5 @@
 meta(charset='utf-8')
 meta(name='viewport' content='width=device-width, initial-scale=1')
-meta(name='description' content='Kes.im, no-log url shortener.')
-meta(name='keywords' content='kes.im, kesim, link shortener, no-log, zero-log')
-meta(name='author' content='Rameş Aliyev')
+meta(name='description' content='zhiurl.cn为您提供: 短网址服务,短网址转换,短网址API接口,批量生成短链接,短网址生成.')
+meta(name='keywords' content='网址缩短,缩短网址,网址压缩,短链接,短域名,短网址,短网址生成')
+meta(name='author' content='HuanGeTech')
