--- a/packages/site/pug/head/ograph.pug
+++ b/packages/site/pug/head/ograph.pug
@@ -1,4 +1,4 @@
-meta(property='og:title' content='Shorten your links | kes.im')
+meta(property='og:title' content='Shorten your links | 知链短链接')
 meta(property='og:type' content='website')
-meta(property='og:url' content='https://kes.im')
+meta(property='og:url' content='https://zhiurl.cn')
 meta(property='og:image' content='/img/emblem_square.png')
