--- a/packages/site/pug/page.pug
+++ b/packages/site/pug/page.pug
@@ -9,7 +9,7 @@ html(lang="en")
       block title
 
     block styles
-      link(href='https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap' rel='stylesheet')
+      link(href='https://fonts.loli.net/css2?family=Nunito:wght@400;700&display=swap' rel='stylesheet')
       link(rel='stylesheet' href='src/main.css')
 
     block scripts
