--- a/packages/site/index.pug
+++ b/packages/site/index.pug
@@ -59,5 +59,5 @@ block content
   //-     kofiwidget2.init('Buy me a Beer', '#4779ff', 'E1E210QHEN');kofiwidget2.draw();
 
   // Build info
-  //#buildInfo.build-info
+  #buildInfo.build-info
 
