--- a/packages/site/index.pug
+++ b/packages/site/index.pug
@@ -46,6 +46,7 @@ block content
 
   // About
   .about
+    | 知链短链接 X 欢哥科技 <br>
     |本站禁止违法违规内容的网站生成短链接，如有发现立刻封停！为了防止滥用，故所有由知链短链生成的链接将会不定期清理。
     //- | developed by <a target='_blank' href='https://rames.dev'>rames</a>, designed by <a target='_blank' href='https://www.hellocihan.com'>cihan</a><br>
     //- | works on top of <a rel='nofollow' target='_blank' href='https://workers.cloudflare.com/'>cloudflare workers</a><br>
