--- a/packages/site/index.pug
+++ b/packages/site/index.pug
@@ -14,9 +14,9 @@ block prepend scripts
 block content
   // Logo
   picture
-    source(srcset='https://gcore.jsdelivr.net/gh/muzihuaner/huancdn@main/img/zhiurllogo.png' media='(prefers-color-scheme: light)')
-    source(srcset='https://gcore.jsdelivr.net/gh/muzihuaner/huancdn@main/img/zhiurllogo.png' media='(prefers-color-scheme: dark)')
-    img#logo.logo(src='https://gcore.jsdelivr.net/gh/muzihuaner/huancdn@main/img/zhiurllogo.png')
+    source(srcset='https://cdn.jsdmirror.com/gh/muzihuaner/huancdn@main/img/zhiurllogo.png' media='(prefers-color-scheme: light)')
+    source(srcset='https://cdn.jsdmirror.com/gh/muzihuaner/huancdn@main/img/zhiurllogo.png' media='(prefers-color-scheme: dark)')
+    img#logo.logo(src='https://cdn.jsdmirror.com/gh/muzihuaner/huancdn@main/img/zhiurllogo.png')
 
   // Input
   .link-input-wrapper
